cluster/apps/networking/traefik/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: networking

  annotations:
    hajimari.io/enable: "true"
    hajimari.io/appName: "traefik"
    hajimari.io/icon: "web"
    hajimari.io/group: networking

    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-chain-internal-no-auth@kubernetescrd"

spec:
  ingressClassName: "traefik"

  tls:
    - hosts:
        - "traefik.${SECRET_DOMAIN}"

  rules:
    - host: "traefik.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
